--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "author": "Paolo Freuli <paolo.freuli@gmail.com>",
+  "author": {
+    "name": "Paolo Freuli",
+    "email": "paolo.freuli@gmail.com"
+  },
   "name": "mqtt_packet",
   "description": "A  library to encode and decode messages for the MQTT protocol",
-  "version": "0.0.8",
-  "contributors": [
-  ],
+  "version": "0.0.9",
+  "contributors": [],
   "keywords": [
     "mqtt",
     "m2m",
@@ -20,20 +22,29 @@
   },
   "main": "index.js",
   "scripts": {
-		"test": "vows --spec"
+    "test": "vows --spec"
   },
-  "bin": {
-  },
+  "bin": {},
   "engines": {
     "node": ">=0.8.6"
   },
   "dependencies": {
-	"logme": "0.3.8"
+    "logme": "0.3.8"
   },
-"devDependencies": {    
-	"mocha": "1.4.x",    
-	"zombie": "1.4.x" ,
-        "assert": "1.1.x" 	
-	}
+  "devDependencies": {
+    "mocha": "1.4.x",
+    "zombie": "1.4.x",
+    "assert": "1.1.x"
+  },
+  "readme": "TBD",
+  "readmeFilename": "README.md",
+  "bugs": {
+    "url": "https://github.com/wuatanabe/mqtt_packet/issues"
+  },
+  "_id": "mqtt_packet@0.0.3",
+  "_from": "mqtt_packet@0.0.3",
+  "dist": {
+    "shasum": "e7310abb3dd18430c0bf083c30398f6c5c451e4d"
+  },
+  "_resolved": "https://registry.npmjs.org/mqtt_packet/-/mqtt_packet-0.0.3.tgz"
 }
- 
